[project]
name = "keel-wiki"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx[socks]>=0.28.1",
    "mwparserfromhell>=0.7.2",
    "openai>=2.46.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "pywikibot>=11.5.0",
    "requests[socks]>=2.34.2",
    "streamlit>=1.59.2",
]

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]

[tool.pyright]
typeCheckingMode = "strict"
ignore = ["app.py"]
